# VeriTrain

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TRACE_FORMAT.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
docker/: README.md
docs/: api-reference.md  faq.md  index.md  limitations.md  quickstart.md  tutorial.md
examples/: README.md
examples/01_simple_compute_limit/: README.md  run.sh  spec.thy  train.py
examples/02_eu_ai_act_compliance/: README.md
examples/03_safety_evaluation_gates/: README.md
examples/04_distributed_training/: README.md
examples/05_adversarial_scenarios/: README.md
experiments/: README.md
experiments/completeness_study/: README.md
experiments/proof_synthesis_performance/: README.md  benchmark.py
experiments/training_overhead/: README.md
experiments/user_study/: README.md
paper/: README.md  references.bib  veritrain_hackathon.tex
prover/prompts/: base_prompt.txt
prover/prompts/few_shot_examples/: compute_limit_proof.txt  safety_eval_proof.txt
scripts/: README.md
specifications/: README.md
specifications/common/: README.md  VeriTrainBase.thy
specifications/regulations/anthropic_rsp/: README.md  asl3_requirements.thy
specifications/regulations/eu_ai_act/: README.md  article_53.thy
specifications/templates/: README.md
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py
tests/unit/: test_trace_format.py
tests/unit/instrumentation/: test_eval_gate.py  (+1 more)
veritrain/: __init__.py  cli.py
veritrain/instrumentation/: __init__.py
veritrain/prover/: __init__.py  synthesis.py
veritrain/specs/: __init__.py
veritrain/validator/: __init__.py  isabelle_wrapper.py
(+11 files in other folders)
